--- a/price.html
+++ b/price.html
@@ -40,7 +40,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <span>VERAA</span>
+            <span>Hostit</span>
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,24 +48,23 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav  ml-auto">
+              <li class="nav-item ">
+                <a class="nav-link" href="index.html">خانه <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html"> در باره ما</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="service.html">خدمات ما</a>
+              </li>
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">صفحه اصلی <span class="sr-only">(فعلی)</span></a>
+                <a class="nav-link" href="price.html">قیمت ها</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">درباره ما</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="service.html">خدمات</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="price.html">قیمت‌گذاری</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">تماس با ما</a>
+                <a class="nav-link" href="contact.html">راه های ارتباطی</a>
               </li>
             </ul>
-            
             <div class="quote_btn-container">
               <form class="form-inline">
                 <button class="btn   nav_search-btn" type="submit">
@@ -75,182 +74,162 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  تماس: 0702008454
+               تماس:0702008454
                 </span>
-              </a>              
+              </a>
             </div>
           </div>
         </nav>
       </div>
     </header>
     <!-- end header section -->
+    <!-- slider section -->
+
+    <!-- end slider section -->
   </div>
 
-  <!-- service section -->
+  <!-- price section -->
 
-  <section class="service_section layout_padding">
+  <section class="price_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our Services
+          Our Pricing
         </h2>
       </div>
-    </div>
-    <div class="container ">
-      <div class="row">
-        <div class="col-md-6 col-lg-4">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/s1.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>
-                Shared Hosting
-              </h4>
-              <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
-              </p>
-              <a href="">
-                Read More
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-
-              </a>
-            </div>
+      <div class="price_container ">
+        <div class="box">
+          <div class="detail-box">
+            <h2>$ <span>49</span></h2>
+            <h6>
+              Startup
+            </h6>
+            <ul class="price_features">
+              <li>
+                2GB RAM
+              </li>
+              <li>
+                20GB SSD Cloud Storage
+              </li>
+              <li>
+                Weekly Backups
+              </li>
+              <li>
+                DDoS Protection
+              </li>
+              <li>
+                Full Root Access
+              </li>
+              <li>
+                24/7/365 Tech Support
+              </li>
+            </ul>
+          </div>
+          <div class="btn-box">
+            <a href="">
+              See Detail
+            </a>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/s2.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>
-                Dedicated Hosting
-              </h4>
-              <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
-              </p>
-              <a href="">
-                Read More
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-
-              </a>
-            </div>
+        <div class="box">
+          <div class="detail-box">
+            <h2>$ <span>99</span></h2>
+            <h6>
+              Standard
+            </h6>
+            <ul class="price_features">
+              <li>
+                4GB RAM
+              </li>
+              <li>
+                50GB SSD Cloud Storage
+              </li>
+              <li>
+                Weekly Backups
+              </li>
+              <li>
+                DDoS Protection
+              </li>
+              <li>
+                Full Root Access
+              </li>
+              <li>
+                24/7/365 Tech Support
+              </li>
+            </ul>
+          </div>
+          <div class="btn-box">
+            <a href="">
+              See Detail
+            </a>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 ">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/s3.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>
-                Cloud Hosting
-              </h4>
-              <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
-              </p>
-              <a href="">
-                Read More
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-
-              </a>
-            </div>
+        <div class="box">
+          <div class="detail-box">
+            <h2>$ <span>149</span></h2>
+            <h6>
+              Business
+            </h6>
+            <ul class="price_features">
+              <li>
+                8GB RAM
+              </li>
+              <li>
+                100GB SSD Cloud Storage
+              </li>
+              <li>
+                Weekly Backups
+              </li>
+              <li>
+                DDoS Protection
+              </li>
+              <li>
+                Full Root Access
+              </li>
+              <li>
+                24/7/365 Tech Support
+              </li>
+            </ul>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/s4.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>
-                VPS Hosting
-              </h4>
-              <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
-              </p>
-              <a href="">
-                Read More
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/s5.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>
-                Wordpress Hosting
-              </h4>
-              <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
-              </p>
-              <a href="">
-                Read More
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/s6.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>
-                Domain Name
-              </h4>
-              <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
-              </p>
-              <a href="">
-                Read More
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-
-              </a>
-            </div>
+          <div class="btn-box">
+            <a href="">
+              See Detail
+            </a>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- end service section -->
-
+  <!-- price section -->
 
   <!-- info section -->
+
   <section class="info_section layout_padding2">
     <div class="container">
       <div class="row">
         <div class="col-md-3">
           <div class="info_contact">
             <h4>
-          راه های ارتباطی
+              Address
             </h4>
             <div class="contact_link_box">
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-             موقعیت
+                  Location
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                تماس 0702008454
+                  Call +01 1234567890
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  veeracompany7@gmail.com
+                  demo@gmail.com
                 </span>
               </a>
             </div>
@@ -273,28 +252,28 @@
         <div class="col-md-3">
           <div class="info_link_box">
             <h4>
-            بخش ها
+              Links
             </h4>
             <div class="info_links">
-              <a class="active" href="index.html">
+              <a class="" href="index.html">
                 <img src="images/nav-bullet.png" alt="">
-               خانه
+                Home
               </a>
               <a class="" href="about.html">
                 <img src="images/nav-bullet.png" alt="">
-               در باره ما
+                About
               </a>
               <a class="" href="service.html">
                 <img src="images/nav-bullet.png" alt="">
-            خدمات
+                Services
               </a>
-              <a class="" href="price.html">
+              <a class="active" href="price.html">
                 <img src="images/nav-bullet.png" alt="">
-              قیمت ها
+                Pricing
               </a>
               <a class="" href="contact.html">
                 <img src="images/nav-bullet.png" alt="">
-             راه های ارتباطی
+                Contact Us
               </a>
             </div>
           </div>
@@ -302,20 +281,21 @@
         <div class="col-md-3">
           <div class="info_detail">
             <h4>
-             معلومات
+              Info
             </h4>
             <p>
-ما یک تیم متخصص و حرفه ای هستیم به ما اعتماد کنید             </p>
+              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+            </p>
           </div>
         </div>
         <div class="col-md-3 mb-0">
           <h4>
-       دنبال کردن
+            Subscribe
           </h4>
           <form action="#">
             <input type="text" placeholder="Enter email" />
             <button type="submit">
-            دنبال کردن
+              Subscribe
             </button>
           </form>
         </div>
@@ -330,12 +310,11 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> تمامی حقوق متعلق به 
-        <a href="https://html.design/">شرکت ویرا است</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved By
+        <a href="https://html.design/">Free Html Templates</a>
       </p>
     </div>
   </footer>
-  
   <!-- footer section -->
 
   <!-- jQery -->
